Fix: Increase z-index of nav services dropdown to be above toats.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,10 @@
     color: darkgreen;
 }
 
+.dropdown-menu {
+    z-index: 100000;
+}
+
 .mate {
     font-family: "Mate", serif;
 }
